--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   expandable: ^5.0.1
   flutter_json_viewer: ^1.0.1
   timeline_tile: ^2.0.0
+  canonical_json: ^1.1.2
 
 dev_dependencies:
   build_runner: ^2.3.3
